[package]
name = "pwgram"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "pwgram"
path = "src/pwgram.rs"

[[bin]]
name = "pwgram-train"
path = "src/pwgram-train.rs"

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
unicode-segmentation = "1.10.0"
serde-lexpr = "0.1.0"
rand = "0.8.5"

[profile.release]
debug = true
